--- a/SimulationObjectsModule/SimulationObjectsModule.vcxproj.filters
+++ b/SimulationObjectsModule/SimulationObjectsModule.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="include\SimulationObjectFactory.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="include\Shape.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MetaSpecification.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -54,6 +60,12 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="src\SimulationObjectFactory.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Shape.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MetaSpecification.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
