--- a/TestApplication/TestApplication.vcxproj.filters
+++ b/TestApplication/TestApplication.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestApplication.cpp">
+    <ClCompile Include="src\TestApplication.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
